# Vet_clinic

./: CMakeLists.txt  README.md  vet.db
inc/: addownerwindow.h  addpetwindow.h  addvisitwindow.h  mainwindow.h  popuplittlewindow.h  popupvisitwindow.h  selectowner.h
src/: CMakeLists.txt  addownerwindow.cpp  addownerwindow.ui  addpetwindow.cpp  addpetwindow.ui  addvisitwindow.cpp  addvisitwindow.ui  mainwindow.cpp  mainwindow.ui  popuplittlewindow.cpp  popuplittlewindow.ui  popupvisitwindow.cpp  popupvisitwindow.ui  selectowner.cpp  selectowner.ui
